# GNU-R-Sphere

./: .anjuta_sym_db.db  README.html  README.md  automake.html  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
matrix/gnu/lib/: c++.tar.xz  dmd.tar.xz  freebasic.tar.xz  objc.tar.xz
src/: Makefile.am  main.cc
